css/styles.css
:root {
  font-family: "Inter", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  font-size: var(--font-size);
  line-height: 1.173;
  font-weight: 400;
  letter-spacing: calc( var(--tracking) * var(--font-size) );

  --font-size: 22px;
  --headline: 1.6rem;
  --tracking: -0.04;

  --color: #FA4811;
  --backdrop: #F1EFE1;
  color: var(--color);
  background-color: var(--backdrop);
}

body {
  position: relative;
  margin: 0;
  width: 100dvw;
  height: 100dvh;
  overflow-x: hidden;
}

body.appear-entry {
  transform: translateY(40vh);
  transition: 1s cubic-bezier(.85,-0.01,.21,1);
  overflow: hidden;
}

body.appear-entry::before {
  position: fixed;
  content: '';
  width: 100vw;
  height: 140vh;
  transform: translateY(-40vh);
  background-color: var(--color);
  z-index: 10000;
  transition: 1s cubic-bezier(.85,-0.01,.21,1);
}

body.appear-entry-loaded {
  transform: translateY(0);
}

body.appear-entry-loaded::before {
  height: 0vh;
  transform: translateY(0vh);
}

a {
  cursor: pointer;
}

h1,h2,h3,h4,h5,p {
  margin: 0;
}

.logo-container {
  position: relative;
  width: 100%;
  height: 32px;
  margin-bottom: 0.5rem;
  box-sizing: border-box;
  display: flex;
}

.logo-container img {
  position: absolute;
  height: 100%;
}

.navigation-link {
  position: relative;
  transform-origin: left center;
  display: inline-block;
  width: auto;
  flex-grow: 0;
  width: fit-content;
  padding-right: 2rem;
}

.navigation-link:hover {
  text-decoration: underline;
}

.homepage-main-section {
  position: relative;
  width: 100dvw;
  height: 100dvh;
  display: flex;
  flex-direction: column;
  box-sizing: border-box;
  padding: 24px;
  min-height: 700px;
}

.hide-scroll {
  overflow: hidden;
}

.row-section {
  position: relative;
  width: 100%;
  display: flex;
  flex-direction: row;
  gap: 16px;
  box-sizing: border-box;
}

.column {
  position: relative;
  width: 100%;
  gap: 32px;
}

.flex-column {
  display: flex;
  flex-direction: column;
}

.flex-grow {
  flex-grow: 1;
}

.w-100 {
  width: 100%;
}
.h-100 {
  height: 100%;
}

p.monospaced {
  margin: 0;
  font-family: 'Roboto Mono', 'Courier New', Courier, monospace;
  font-weight: 400;
  font-size: 16px;
  line-height: 22px;
  letter-spacing: 0;
}

@media screen and (max-width: 1000px) {
  .homepage-main-section {
    padding: 24px;
  }

  :root {
    --font-size: 19px;
  }
}

@media screen and (max-width: 720px) {
  .homepage-main-section {
    padding: 16px;
    flex-direction: column;
  }
  .column {
    gap: 28px;
  }

  :root {
    --font-size: 16px;
  }
}

@media screen and (max-width: 480px) {
  .column {
    gap: 16px;
  }

  :root {
    --font-size: 16px;
  }
}

@media screen and (max-width: 720px) {
  .column-on-tablet {
    flex-direction: column;
  }
  .navigation-link {
    padding-right: 0rem;
  }
  .big-title-container {
    top: 56px;
    transform: none !important;
    height: 230px !important;
  }
  .big-title-container .title-line {
    width: 100% !important;
    height: auto;
  }
  #title-column {
    height: 300px;
    margin-bottom: 1rem;
    flex-grow: 0;
  }
  #specialty-column {
    flex-direction: column-reverse;
    justify-content: space-between;
    flex-grow: 1;
  }
}

[data-homepage-random-group] {
  transition: 0ms;
}

ul.design-specialty-list {
  margin: 0;
  list-style: none;
  font-size: var(--headline);
  line-height: 1.8rem;
  padding: 0;
}

.big-title-container {
  position: absolute;
  bottom: 0;
  width: auto;
  height: 100%;
  display: flex;
  flex-direction: column;
  transform: rotate(-90deg) translateY(100%);
  transform-origin: bottom left;
  gap: 0.08rem;
}

.big-title-container .title-line {
  position: relative;
  display: flex;
  flex-direction: row;
  overflow: hidden;
  width: 1200px;
  gap: 0.05rem;
  pointer-events: none;
  user-select: none;
}
.title-line img {
  opacity: 1 !important;
}

canvas {
  pointer-events: none;
  position: absolute;
    top: 0;
    z-index: 100;
    display: none;
    opacity: 0;
}

